Stricten compiler options to pedantic C89 and C++98

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,10 @@ project(CronCalc)
 cmake_minimum_required(VERSION 3.6)
 
 add_library(cron_calc_c STATIC src/cron_calc.c)
+target_compile_options(cron_calc_c PRIVATE -std=c89 -Wall -pedantic)
 
 add_library(cron_calc_cpp STATIC src/cron_calc.cpp)
+target_compile_options(cron_calc_cpp PRIVATE -std=c++98 -Wall -pedantic)
 
 add_executable(cron_calc_test test/cron_calc_test.cpp)
 
