Relaxed C side to C99 (imho C89/90 is way too old :) )

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,13 @@ project(CronCalc)
 cmake_minimum_required(VERSION 3.6)
 
 add_library(cron_calc_c STATIC src/cron_calc.c)
-target_compile_options(cron_calc_c PRIVATE -std=c89 -Wall -pedantic)
+target_compile_options(cron_calc_c PRIVATE -std=c99 -Wall -Werror -pedantic)
 
 add_library(cron_calc_cpp STATIC src/cron_calc.cpp)
-target_compile_options(cron_calc_cpp PRIVATE -std=c++98 -Wall -pedantic)
+target_compile_options(cron_calc_cpp PRIVATE -std=c++98 -Wall -Werror -pedantic)
 
 add_executable(cron_calc_test test/cron_calc_test.cpp)
+target_compile_options(cron_calc_test PRIVATE -std=c++11)
 
 target_link_libraries(cron_calc_test PRIVATE cron_calc_cpp cron_calc_c)
 
