--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,12 @@
 
 language: cpp
 
-sudo: false
-
-os:
-  - linux
-  - osx
-
-compiler:
-  - gcc
-  - clang
+matrix:
+  include:
+    - os: linux
+      compiler: gcc
+    - os: osx
+      compiler: clang
 
 script:
   - ./build.sh
-
-notifications:
-  email:
-    on_success: always
