--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,11 @@
 project(CronCalc)
 cmake_minimum_required(VERSION 3.6)
 
-if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
+if(${CRON_CALC_WITH_COVERAGE})
+    message("Coverage intstrumentation enabled.")
     set(CRON_CALC_COVERAGE --coverage)
-    set(CRON_CALC_COVERAGE_LIB gcov)
 else()
     set(CRON_CALC_COVERAGE "")
-    set(CRON_CALC_COVERAGE_LIB "")
 endif()
 
 add_library(cron_calc_c STATIC src/cron_calc.c)
@@ -23,7 +22,7 @@ target_compile_options(cron_calc_cpp PRIVATE -std=c++98 -Wall -Werror -pedantic 
 add_executable(cron_calc_test test/cron_calc_test.cpp)
 target_compile_options(cron_calc_test PRIVATE -std=c++11 ${CRON_CALC_COVERAGE})
 
-target_link_libraries(cron_calc_test PRIVATE cron_calc_cpp cron_calc_c ${CRON_CALC_COVERAGE_LIB})
+target_link_libraries(cron_calc_test PRIVATE cron_calc_cpp cron_calc_c ${CRON_CALC_COVERAGE})
 
 target_include_directories(cron_calc_test
     PRIVATE ${CMAKE_CURRENT_LIST_DIR}/src
