--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2018 Sergey Burnevsky (sergey.burnevsky @ gmail.com)
+# Copyright (c) 2018-2019 Sergey Burnevsky (sergey.burnevsky @ gmail.com)
 #
 # This software is released under the MIT License.
 # https://opensource.org/licenses/MIT
